feat: add a top nav, which doesn't work

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
     }
   </style>
   <title>ds-compose</title>
 </head>
 
-<body>
-  <ds-compose></ds-compose>
+  <body>
+    <sp-theme scale="medium" color="dark">
+      <ds-compose></ds-compose>
+    </sp-theme>
 
-  <script type="module" src="./src/ds-compose.js"></script>
-</body>
+    <script type="module" src="./src/ds-compose.js"></script>
+  </body>
 
 </html>
